# vbt-api

./: .env.example  CLAUDE.md  Dockerfile  pyproject.toml  render.yaml  requirements.txt
firmware/: VBT_RFID_IMU_v2.txt  VBT_RFID_IMU_v3.txt  VBT_RFID_IMU_v4.ino  VBT_RFID_IMU_v5.ino  VBT_RFID_IMU_v6.ino  VBT_RFID_IMU_v6_enterprise.ino  display_test.ino  hardware_test.ino  rfid_pin_test.ino
firmware/rfid_only_test/: rfid_only_test.ino
sql/: 01_extensions.sql  02_profiles.sql  03_teams.sql  04_players.sql  05_player_maxes.sql  06_rfid.sql  07_workout_templates.sql  08_workout_assignments.sql  09_vbt_data.sql  10_rpc_functions.sql  11_vbt_rep_samples.sql  12_vbt_rep_phase_metrics.sql  13_player_testing.sql  14_metric_history.sql  15_tracked_columns.sql  16_workout_exercise_logs.sql
src/weight_room/: api.py  auth.py  config.py  db.py
src/weight_room/core/: models.py
src/weight_room/routers/: dashboard.py  device.py  maxes.py  players.py  profiles.py  rfid.py  teams.py  testing.py  vbt.py  workouts.py
